# pomodoro-app

./: Cargo.toml  README.md  index.html  styles.css
.github/workflows/: release.yml
src/: app.rs  cleanup_scheduler.rs  keyboard_shortcuts.rs  main.rs  task.rs  theme.rs  timer.rs  types.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: camera_recorder.rs  camera_settings.rs  mod.rs  session_history.rs  session_selector.rs  session_stats.rs  task_manager.rs  task_selector.rs  task_stats.rs  theme_settings.rs  timer_controls.rs  timer_display.rs  timer_settings.rs
