[package]
name = "pomodoro-app-ui"
version = "0.1.1"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaRecorder",
    "HtmlVideoElement",
    "Blob",
    "BlobEvent",
    "MediaStreamConstraints",
    "Event",
    "MediaStreamTrack",
    "MediaTrackConstraints",
    "MediaTrackSettings",
    "EventTarget",
    "DomException",
    "FileReader",
    "VideoTrack",
    "AudioTrack",
    "AudioContext",
    "OscillatorNode",
    "GainNode",
    "AudioDestinationNode",
    "AudioNode",
    "OscillatorType",
    "AudioParam",
    "Notification",
    "KeyboardEvent",
    "Document",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "MediaQueryList",
] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.3", features = ["futures"] }

[workspace]
members = ["src-tauri"]